feat: help cursor

--- a/public/index.html
+++ b/public/index.html
@@ -227,6 +227,9 @@
         font-size: 1.05rem;
         text-align: right;
       }
+      abbr.summary-strong {
+        cursor: help;
+      }
       small {
         color: var(--muted);
       }
